@@ -1,30 +1,18 @@
 package it.polimi.ingsw.gc31.controller;
 
+import it.polimi.ingsw.gc31.client_server.interfaces.IController;
+import it.polimi.ingsw.gc31.client_server.interfaces.VirtualClient;
+import it.polimi.ingsw.gc31.client_server.log.ServerLog;
+import it.polimi.ingsw.gc31.client_server.queue.clientQueue.*;
+import it.polimi.ingsw.gc31.client_server.queue.serverQueue.JoinGameObj;
+import it.polimi.ingsw.gc31.client_server.queue.serverQueue.ServerQueueObject;
+import it.polimi.ingsw.gc31.exceptions.NoGamesException;
+
 import java.rmi.RemoteException;
 import java.rmi.server.UnicastRemoteObject;
 import java.util.*;
-import java.util.concurrent.*;
-
-import it.polimi.ingsw.gc31.client_server.log.ServerLog;
 import javafx.util.Pair;
-import org.fusesource.jansi.Ansi;
-
-import it.polimi.ingsw.gc31.client_server.interfaces.IController;
-import it.polimi.ingsw.gc31.client_server.interfaces.VirtualClient;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.GameCreatedObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.GameDoesNotExistObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.GameIsFullObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.HeartBeatObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.JoinedToGameObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.QuitFromGameRObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.ShowGamesObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.ValidUsernameObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.WrongGameSizeObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.WrongUsernameObj;
-import it.polimi.ingsw.gc31.client_server.queue.clientQueue.SaveToken;
-import it.polimi.ingsw.gc31.client_server.queue.serverQueue.ServerQueueObject;
-import it.polimi.ingsw.gc31.exceptions.NoGamesException;
-import it.polimi.ingsw.gc31.exceptions.PlayerNicknameAlreadyExistsException;
+import java.util.concurrent.*;
 
 //NOTE creation of GameController for match creation
 // Does the GameController related to the first match get created immediately after the first player has logged in?
@@ -47,16 +35,19 @@ public class Controller extends UnicastRemoteObject implements IController {
             singleton = new Controller();
         } catch (RemoteException e) {
             // Handle the exception appropriately
-            e.printStackTrace();
             throw new RuntimeException("Failed to create Controller instance.", e);
         }
     }
 
-    private final List<GameController> gameControlList;
-    private Map<String, VirtualClient> tempClients;
-    private final Set<String> nicknames;
+    protected final List<GameController> gameControlList;
+    protected Map<String, VirtualClient> tempClients;
+    protected final Set<String> nicknames;
     private final LinkedBlockingQueue<ServerQueueObject> callsList;
-    private final Map<Integer, VirtualClient> newConnections;
+    protected final Map<Integer, VirtualClient> newConnections;
+    protected final Map<Integer, Pair<String, Integer>> disconnected; // token - gameID
+
+    protected ConcurrentHashMap<VirtualClient, Long> clientsHeartBeat;
+    private final ScheduledExecutorService scheduler;
 
     /**
      * This method generates a unique token (from 0 to 999) every time a new client
@@ -69,10 +60,11 @@ public class Controller extends UnicastRemoteObject implements IController {
     public int generateToken(VirtualClient newConnection) {
         int token;
         token = (int) (Math.random() * 1000);
-        while (newConnections.containsValue(token)) {
+        while (newConnections.containsKey(token)) {
             token = (int) (Math.random() * 1000);
         }
         this.newConnections.put(token, newConnection);
+        ServerLog.controllerWrite("Generic token generated for the new connection: " + token);
         return token;
     }
 
@@ -83,18 +75,12 @@ public class Controller extends UnicastRemoteObject implements IController {
      *
      * @param newConnection is the VirtualClient that is trying to set its username
      */
-    public void sendToken(VirtualClient newConnection) {
+    public void sendToken(VirtualClient newConnection, int token, boolean temporary) {
+        // sendToken usato per mandare il token definitivo e non quello temporaneo
         try {
-            Integer getToken = null;
-            for (Map.Entry<Integer, VirtualClient> t : newConnections.entrySet()) {
-                if (t.getValue().equals(newConnection)) {
-                    getToken = t.getKey();
-                }
-
-            }
-            newConnection.sendCommand(new SaveToken(getToken));
+            newConnection.sendCommand(new SaveToken(token, temporary));
         } catch (RemoteException e) {
-            System.out.println("The token was not sent correctly");
+            ServerLog.controllerWrite("The token was not sent correctly");
         }
     }
 
@@ -105,6 +91,7 @@ public class Controller extends UnicastRemoteObject implements IController {
      * @throws RemoteException if an RMI error occurs.
      */
     private Controller() throws RemoteException {
+        disconnected = new HashMap<>();
         tempClients = new HashMap<>();
         nicknames = new HashSet<>();
         gameControlList = new ArrayList<>();
@@ -166,25 +153,130 @@ public class Controller extends UnicastRemoteObject implements IController {
      *
      * @param client   the client to connect.
      * @param username the username of the client.
-     * @throws PlayerNicknameAlreadyExistsException if the username is already in
-     *                                              use.
-     * @throws RemoteException
+     * @return false if wrong username, true if connection is successful
+     * @throws RemoteException if general connection error occurs
      */
-    public boolean connect(VirtualClient client, String username)
+    // FIXME forse non serve client come parametro
+    public boolean connect(VirtualClient client, String username, Integer tempToken, Integer token)
             throws RemoteException {
-        sendToken(client);
+        if (token == -1) {
+            // se l'username è valido genero il nuovo token e lo mando
+            ServerLog.controllerWrite("First connection of " + username + " with temporary token " + tempToken);
+            VirtualClient newConnectionClient = newConnections.get(tempToken);
+            if (usernameValidation(username, newConnectionClient)) {
+                int newToken = generateToken(client);
+
+                // tolgo da newConnection il vecchio token e metto quello nuovo
+                newConnections.remove(tempToken);
+                newConnections.put(newToken, newConnectionClient);
+                sendToken(newConnectionClient, newToken, false);
+                ServerLog.controllerWrite("Token sent and saved for user: " + username + " | " + newToken);
+                return true;
+            } else
+                return false;
+        } else {
+            ServerLog.controllerWrite(
+                    "Reconnection of: " + "temporary token = " + tempToken + " | " + "token = " + token);
+            if (disconnected.containsKey(token)) {
+                // viene riconnesso alla partita
+                // trovo il nuovo client in newConnections
+                VirtualClient clientConnections = newConnections.get(tempToken);
+                newConnections.remove(tempToken);
+                newConnections.put(token, clientConnections);
+                clientConnections.sendCommand(new WantsReconnectObj(disconnected.get(token).getKey()));
+                clientConnections.setController(this);
+                clientsHeartBeat.put(clientConnections, System.currentTimeMillis());
+                ServerLog.controllerWrite("Reconnection request to game with id=" + disconnected.get(token).getValue()
+                        + " sent to " + disconnected.get(token).getKey());
+            } else {
+                ServerLog.controllerWrite("First connection of " + username + "with temporary token " + tempToken);
+                VirtualClient newConnectionClient = newConnections.get(tempToken);
+                if (usernameValidation(username, newConnectionClient)) {
+                    int newToken = generateToken(client);
+                    ServerLog.controllerWrite("Generazione nuovo token per: " + username + " | " + newToken);
+
+                    // tolgo da newConnection il vecchio token e metto quello nuovo
+                    newConnections.remove(tempToken);
+                    newConnections.put(newToken, newConnectionClient);
+                    sendToken(newConnectionClient, newToken, false);
+                    ServerLog.controllerWrite("Token sent and saved for user: " + username + " | " + newToken);
+                    return true;
+                } else
+                    return false;
+            }
+            return false;
+        }
+    }
+
+    private boolean usernameValidation(String username, VirtualClient client) {
+        if (username == null) {
+            try {
+                client.sendCommand(new WrongUsernameObj(null));
+            } catch (RemoteException e) {
+                e.printStackTrace();
+            }
+            return false;
+        }
         if (nicknames.add(username)) {
             tempClients.put(username, client);
-            client.setController(this);
-            client.sendCommand((new ValidUsernameObj(username)));
+            try {
+                client.setController(this);
+                client.sendCommand((new ValidUsernameObj(username)));
+            } catch (RemoteException e) {
+                e.printStackTrace();
+            }
 
             clientsHeartBeat.put(client, System.currentTimeMillis());
 
             return true;
         } else {
-            client.sendCommand(new WrongUsernameObj(username));
+            try {
+                client.sendCommand(new WrongUsernameObj(username));
+            } catch (RemoteException e) {
+                e.printStackTrace();
+            }
             return false;
-            // FIX PlayerAlreadyExistsException non più necessaria (da verificare)
+        }
+    }
+
+    /**
+     * Più un TODO ch una doc
+     * Viene invocato dall'oggetto Reconnect.java (serverQueue) dopo che il
+     * client ha specificato che vuole connettersi in risposta a
+     * WantsReconnectObj.java
+     * Deve innescare gli update dei listener e mandare la risposta al client
+     * (pseudocode sotto)
+     *
+     * @param token is the token of the client
+     * @param esito is true if the client wants to reconnect, false otherwise
+     */
+    public void rejoin(int tempToken, int token, boolean esito) {
+        VirtualClient client = newConnections.get(token);
+        if (esito) {
+            try {
+                synchronized (gameControlList.get(disconnected.get(token).getValue()).clientListLock) {
+                    client.sendCommand(new ReJoinedObj(true, gameControlList.get(disconnected.get(token).getValue()).clientList.keySet().stream().toList()));
+                } // mandare questo è importante perché la ui fa cose in //
+                gameControlList.get(disconnected.get(token).getValue()).reJoinGame(disconnected.get(token).getKey(),
+                        newConnections.get(token));
+                // risposta a questo update
+            } catch (RemoteException e) {
+                e.printStackTrace();
+            }
+        } else {
+            // If the player doesn't want to reconnect to the game a RejoinedObj with
+            // parameter false is sent
+            // to the client
+            try {
+                client.sendCommand(new ReJoinedObj(false, null));
+            } catch (RemoteException e) {
+                e.printStackTrace();
+            }
+            newConnections.remove(token);
+                newConnections.put(tempToken, client);
+            disconnected.remove(token);
+            // At this point the Controller tries to connect the client as if it was the
+            // first connection of it
         }
     }
 
@@ -198,18 +290,18 @@ public class Controller extends UnicastRemoteObject implements IController {
     public void createGame(String username, int maxNumPlayer) throws RemoteException {
         VirtualClient client = tempClients.get(username);
         if (maxNumPlayer < 2 || maxNumPlayer > 4) {
-            client.sendCommand(new WrongGameSizeObj());
+            sendUpdateToClient(client, new WrongGameSizeObj());
         } else {
             try {
                 gameControlList.add(new GameController(username, client, maxNumPlayer,
                         gameControlList.size()));
                 client.setGameID(gameControlList.size() - 1);
-            } catch (RemoteException e) {
-                e.printStackTrace();
+            } catch (RemoteException ignored) {
+
             }
             tempClients.remove(username);
-            client.sendCommand(new GameCreatedObj(gameControlList.size() - 1));
-            client.setGameController(gameControlList.get(gameControlList.size() - 1));
+            sendUpdateToClient(client, new GameCreatedObj(gameControlList.size() - 1));
+            client.setGameController(gameControlList.getLast());
             ServerLog.controllerWrite("A new game has been created with id: " + gameControlList.size());
         }
     }
@@ -222,21 +314,17 @@ public class Controller extends UnicastRemoteObject implements IController {
      * @throws RemoteException if an RMI error occurs.
      */
     public void joinGame(String username, int idGame) throws RemoteException {
-
         VirtualClient client = tempClients.get(username);
         if (idGame >= gameControlList.size() || idGame < 0) {
-            client.sendCommand(new GameDoesNotExistObj());
+            sendUpdateToClient(client, new GameDoesNotExistObj());
         } else {
 
             if (gameControlList.get(idGame).getCurrentNumberPlayers() != gameControlList.get(idGame)
                     .getMaxNumberPlayers()) {
-                gameControlList.get(idGame).joinGame(username, client);
-                client.setGameController(gameControlList.get(idGame));
-                client.sendCommand(new JoinedToGameObj(idGame, gameControlList.get(idGame).getMaxNumberPlayers()));
+                gameControlList.get(idGame).sendCommand(new JoinGameObj(client, username));
                 tempClients.remove(username);
-                gameControlList.get(idGame); // ??
             } else {
-                client.sendCommand(new GameIsFullObj(idGame));
+                sendUpdateToClient(client, new GameIsFullObj(idGame));
             }
         }
     }
@@ -244,22 +332,23 @@ public class Controller extends UnicastRemoteObject implements IController {
     /**
      * This method add the client (that just quit a game lobby) to the map
      * tempClients
-     * 
+     *
      * @param username is the username of the player that just quit
-     * @param idGame   is the id of the game which was joined by the player
      * @param client   is the client that requested to quit from a lobby
      * @throws RemoteException if an error occurs in the rmi connection
      */
-    public void quitGame(String username, int idGame, VirtualClient client) throws RemoteException {
+    public void quitGame(String username, VirtualClient client) throws RemoteException {
         tempClients.put(username, client);
-        // se il gioco era costituito da una sola persona va eliminato il gamecontroller
+        // se il gioco era costituito da una sola persona va eliminato il gameController
         // corrispondente
-        client.sendCommand(new QuitFromGameRObj(idGame));
+        sendUpdateToClient(client, new QuitFromGameRObj(username));
     }
 
     // GETTERS
 
     /**
+     * Controller getter
+     *
      * @return the singleton instance.
      */
     public static synchronized Controller getController() {
@@ -269,24 +358,23 @@ public class Controller extends UnicastRemoteObject implements IController {
     /**
      * Returns a list of the current games.
      *
+     * @param username username of player to whom sent the message
      * @throws RemoteException  if an RMI error occurs.
      * @throws NoGamesException if there are no current games.
      */
     public void getGameList(String username) throws RemoteException, NoGamesException {
+        List<String> res = new ArrayList<>();
         if (gameControlList.isEmpty()) {
-            List<String> res = new ArrayList<>();
             res.add("NO GAMES AVAILABLE");
-            tempClients.get(username).sendCommand(new ShowGamesObj(res));
         } else {
-            List<String> res = new ArrayList<>();
             for (int i = 0; i < gameControlList.size(); i++) {
                 res.add(
                         i + " "
                                 + gameControlList.get(i).getCurrentNumberPlayers() + " / "
                                 + gameControlList.get(i).getMaxNumberPlayers());
             }
-            tempClients.get(username).sendCommand(new ShowGamesObj(res));
         }
+        sendUpdateToClient(tempClients.get(username), new ShowGamesObj(res));
     }
 
     /**
@@ -304,16 +392,12 @@ public class Controller extends UnicastRemoteObject implements IController {
     }
 
     // Heartbeat resources
-    // FIXME spostare in cima attributi e metodi
-    private ConcurrentHashMap<VirtualClient, Long> clientsHeartBeat;
-    private ScheduledExecutorService scheduler;
-
     /**
      * This method creates a task that execute every 10 seconds the checkHeartBeats
      * method
      */
     private void startHeartBeatCheck() {
-        scheduler.scheduleAtFixedRate(() -> checkHeartBeats(), 0, 10, TimeUnit.MILLISECONDS);
+        scheduler.scheduleAtFixedRate(this::checkHeartBeats, 0, 10, TimeUnit.SECONDS);
     }
 
     /**
@@ -326,20 +410,58 @@ public class Controller extends UnicastRemoteObject implements IController {
      * remove the client from the list,
      * also closes the connection towards the client.
      */
-    private void checkHeartBeats() {
+    protected void checkHeartBeats() {
         long now = System.currentTimeMillis();
+
+        // Checks for every active client if the last heart beat was received at most 10
+        // seconds ago
+        // if the last heart beat was received more than 10 seconds ago the client is
+        // considered crashed
         for (VirtualClient client : clientsHeartBeat.keySet()) {
             if (now - clientsHeartBeat.get(client) > 10000) {
+                // The crashed client is removed from the map with all the active clients
                 clientsHeartBeat.remove(client);
-                /*
-                 * try "chiudi connessione al client disconnesso"
-                 */
-                for(String username : tempClients.keySet()){
-                    if((tempClients.get(username)).equals(client))
 
-                        disconnectFromGame(username);
+                // I need to find the client, if it is in tempClients it can't be in any
+                // gameController.clientList
+                // so the second for will not be executed
+                boolean found = false;
+
+                // Checks if the disconnected client was in the tempClients map (it was not in a
+                // game)
+                for (String username : tempClients.keySet()) {
+                    if ((tempClients.get(username)).equals(client)) {
+                        // If the client is found it is removed from the tempClients map
+                        tempClients.remove(username);
+                        found = true;
+                    }
                 }
-                System.out.println("Client disconnesso per timeout");
+
+                // If the client was not found in tempClients => it is in a clientList of a
+                // GameController (it was
+                // in a game). The for searches the client in all the gameController.clientList,
+                // if it is found the
+                // disconnectPlayer method of the gameController is invoked with also the
+                // disconnect method of the Controller
+                if (!found) {
+                    for (GameController gc : gameControlList) {
+                        synchronized (gc.clientListLock) {
+                            for (String u : gc.clientList.keySet()) {
+                                if ((gc.clientList.get(u)).equals(client)) {
+                                    gc.disconnectPlayer(u);
+
+                                    // I need to know the token of the disconnected client for the disconnect method
+                                    for (int t : newConnections.keySet()) {
+                                        if ((newConnections.get(t)).equals(client)) {
+                                            disconnect(u, gc.getIdGame(), t);
+                                            ServerLog.controllerWrite("Client disconnected " + u + " | " + t);
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     }
@@ -356,29 +478,30 @@ public class Controller extends UnicastRemoteObject implements IController {
      */
     @Override
     public void updateHeartBeat(VirtualClient client) throws RemoteException {
-        if (!clientsHeartBeat.containsKey(client))
-            System.out.println("Il client da cui è arrivato l'HeartBeat non è presente nella mappa");
-        clientsHeartBeat.replace(client, System.currentTimeMillis());
-        // System.out.println(Ansi.ansi().cursor(1,
-        // 1).a("\\033[5m💚\\033[0m\\").reset());
-        // System.out.println("HeartBeat ricevuto");
-        client.sendCommand(new HeartBeatObj());
-    }
-
-    /**
-     * This method is invoked if a check on the heart beat is met.
-     * The method searches for the gameController of the client that needs to be disconnected,
-     * if the gameController and the correct couple username/VirtualClient is found
-     * the method disconnectPlayer is invoked.
-     *
-     * @param username is the username of the client to be disconnected
-     */
-    private void disconnectFromGame(String username) {
-        for (int i = 0; i < gameControlList.size(); i++) {
-            for(String u : gameControlList.get(i).clientList.keySet())
-                if(u.equals(username))
-                    gameControlList.get(i).disconnectPlayer(username);
+        if (!clientsHeartBeat.containsKey(client)) {
+            ServerLog.controllerWrite("HeartBeat received is not bound to any client");
+        } else {
+            clientsHeartBeat.replace(client, System.currentTimeMillis());
+            client.sendCommand(new HeartBeatObj());
         }
     }
 
+    public void disconnect(String username, int idGame, int token) {
+        disconnected.put(token, new Pair<>(username, idGame));
+        ServerLog.controllerWrite("Client disconnected due to timeout");
+    }
+
+    private void sendUpdateToClient(VirtualClient client, ClientQueueObject clientQueueObject) {
+        new Thread(() -> {
+            try {
+                client.sendCommand(clientQueueObject);
+            } catch (RemoteException ignore) {
+
+            }
+        }).start();
+    }
+
+    public void createReMatch(Map<String, VirtualClient> players) {
+        ServerLog.controllerWrite("Another game has been created");
+    }
 }
